# Debt-Settlement-Engine

./: .gitignore  PROJECT_PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: main.py  requirements.txt
backend/app/api/v1/routes/: groups.py  optimize.py
backend/app/core/: engine_bridge.py
backend/app/models/: group.py  transaction.py
backend/app/services/: group_service.py
backend/database/: db_connection.py
backend/tests/: __init__.py  conftest.py  test_api.py
core_engine/: CMakeLists.txt  dummy_input.json
core_engine/include/: optimizer.hpp
core_engine/src/: main.cpp  optimizer.cpp
database/: db_connection.py
frontend/: nginx.conf
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: DebtLedger.jsx  GroupManager.jsx  TransactionForm.jsx
